tests/test-read-dwarf.cc
@@ -105,6 +105,11 @@ InOutSpec in_out_specs[] =
     "data/test-read-dwarf/test10-pr18818-gcc.so.abi",
     "output/test-read-dwarf/test10-pr18818-gcc.so.abi",
   },
+  {
+    "data/test-read-dwarf/test11-pr18828.so",
+    "data/test-read-dwarf/test11-pr18828.so.abi",
+    "output/test-read-dwarf/test10-pr18828.so.abi",
+  },
   // This should be the last entry.
   {NULL, NULL, NULL}
 };
